...
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Score">

                <!--<android.support.design.widget.TextInputEditText-->
                    <!--android:id="@+id/newScore"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content" />-->

                <AutoCompleteTextView
                    android:id="@+id/newScore"
                    android:layout_width="match_parent"
...
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/selectImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/score_create_select_image_button" />
            </android.support.design.widget.TextInputLayout>
...
