<resources>
    <string name="app_name">Score Chest</string>
    <string name="title_activity_google_sign_in">GoogleSignInActivity</string>
    <string name="server_client_id">748827521810-jo9ad9o7brpjmhdb1h7movd6m865c3f5.apps.googleusercontent.com</string>
    <!--<string name="server_client_id">780384510375-31ga7gu7q14u9qo1o4cc4e859nfsms4r.apps.googleusercontent.com</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="game_list_fragment_title">Available games</string>

    <string name="score_list_fragment_title">Highscores</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_score_list">ScoreListActivity</string>

    <string name="score_list_game_id_arg">gameId</string>
    <string name="score_create_select_image_button">Image Picker</string>

</resources>
